syntax = "proto3";
package contract;

import "google/protobuf/any.proto";
import "Error.proto";

option go_package = "./grpc/pb";

message Exchange {
    string name = 1;
    string type = 2;
    optional bool durable = 3;
    optional bool auto_deleted = 4;
    optional bool internal = 5;
    optional bool no_wait = 6;
    map<string, google.protobuf.Any> args = 7;
}

service ExchangeService {
    rpc CreateExchange(Exchange) returns (Error);
}